--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,118 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  /* background: linear-gradient(to bottom, #1c5380 0%, #1c5380 65%, black 65%, black 100%); */
+
+};
+
+/* section {
+  background-color: blue;
+} */
+ 
+nav {
+  display: flexbox;
+  float: right
+  
+} 
+
+ul {
+  /* background-color: #1c5380; */
+  height: 300px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  
+  
+  
+  
+}
+
+.phones{
+  margin-top: 10%;
+  margin-left: 15%;
+  float: left;
+  margin-right: 3%;
+  
+}
+
+li{
+  
+  justify-content: center;
+  list-style-type: none;
+  
+}
+
+.text {
+  
+  padding: 15px 50px;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  margin-top: -100px;
+  margin-right: 100px;
+  background-size: cover;
+  max-width: 530px;
+  
+}
+
+.section-top{
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat;
+
+}
+
+.section-bottom{
+  display: flex;
+}
+
+.android{
+  padding-left: 200px;
+}
+
+.btn{
+  margin: 180px;
+  padding: 5px 10px;
+  /* background-image: url(/images/bgtile.png); */
+  background-color: rgba(103, 140, 172, 1);
+  color: white;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  border: solid 1px #06365f;
+  /* text-align: center; */
+  /* justify-content: center; */
+  /* align-items: center; */
+/* justify-content: center; */
+}
+
+.button{
+/* position: relative; */
+display: flex;
+
+}
+
+.home {
+  margin-right: 5px;
+}
+
+.title {
+  color: #06365f;
+}
+
+.footer a {
+  list-style-type: none;
+  color: #1c5380;
+  text-decoration: none;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer {
+  margin-top: 200px;
+  display: flex;
+  position: absolute;
+  width: 100%;
+  justify-content: center;
+  margin-bottom: auto;
 }
