--- a/styles/style.css
+++ b/styles/style.css
@@ -3,29 +3,124 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
+  height: 100%;
+  background: linear-gradient(180deg, #1c5380 50%, #ffffff 50%);
+  background-repeat: no-repeat;
 }
 
 .container {
   display: grid;
   grid-template-columns: 40% 60%;
+  max-width: 80%;
+  margin: auto;
+  margin-top: 120px;
 }
 
 .left_container {
   grid-column: 1;
+  margin: 75px;
+}
+
+.left_container img {
+  height: 100%;
 }
 
 .right_container {
   grid-column: 2;
+  margin: 75px;
 }
 
 .title_container {
-  display: flex;
+  display: grid;
+  grid-template-columns: 75% 25%;
+}
+
+.title {
+  grid-column: 1;
+  margin: auto;
+  margin-left: 0px;
+}
+
+.title img {
+  width: 120%;
+}
+
+.login {
+  grid-column: 2;
+  align-self: center;
+  height: 50px;
+  display: grid;
+  grid-template-columns: 30% 60%;
+  background: linear-gradient(to bottom, #2a6ba0, #1c5380);  color: white;
+  font-size: 18px;
+  font-weight: 900;
+  border-radius: 5px;
+  box-shadow: 0px 0px 3px 1px #06365f;
+}
+
+.login_icon {
+  grid-column: 1;
+  margin: auto;
+  line-height: 0px;
+  margin-right: -10px;
+}
+
+.login_text {
+  grid-column: 2;
+  margin: auto;
+  text-align: center;
+  line-height: 0px;
 }
 
 .text_container {
-  background-color: #ffffff;
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-sizing: border-box;
+  padding: 50px;
+  padding-top: 25px;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+.text h2 {
+  color: #06365f;
+  font-size: 30px;
+}
+
+.download_links {
+  margin-top: 35px;
+  display: flex;
+}
+
+.footer_container {
+  display: grid;
+  grid-template-columns: 70% 30%;
+}
+
+.footer_links {
+  margin: auto;
+}
+
+.footer_links li, a {
+  grid-column: 1;
+  display: inline;
+  margin: auto;
+  margin-left: 10px;
+  text-decoration: none;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-weight: 900;;
+}
+
+#copyright {
+  grid-column: 2;
+  color: #a19f9a;
+  font-weight: 900;
+  text-transform: uppercase;
 }
