--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,66 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  
+}
+.style-horizontal{
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 100px;
+  position: absolute;
+  top: 107px;
+  padding-left: 100px;
+  
+}
+.style-title{
+display: flex;
+flex-direction: row;
+justify-content: space-evenly;
+align-items: center;
+}
+.border{
+  width: 420px;
+  background-image: url("/images/frame.png");
+  padding: 20px;
+  background-repeat: no-repeat;
+}
+.footer{
+  color: blue;
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 10px;
+  margin-left: 215px;
+  margin-right: 215px;
+  margin-top: 400px ;
+  list-style: none;
+  
+}
+.li{
+  color: gray;
+}
+.style-bottom{
+  padding-bottom: 50px;
+  padding-top: 20px;
+}
+header{
+  
+  background-image: url(/images/bgtile.png);
+  height: 300px;
+}
+section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+span{
+  font-weight: bold;
+}
+.button{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 10px;
+  background-image: url(/images/bgtile.png);
+  height: 40px;
+  color: antiquewhite;
 }
