--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,90 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.principalBox{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 100px;
+  left: 125px;
+}
+
+.background{
+  background-color: #1c5380;
+  height: 300px;
+}
+
+.text{
+  display: flex;
+  flex-direction: column;
+}
+
+p{
+  width: 450px;
+  padding: 20px;
+}
+
+.top{
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  width: 490px;
+  padding-left: 21px;
+
+}
+h2{
+  padding-left: 20px;
+  color: #06365f;
+}
+
+.gradient{
+  background-image: url("/images/frame.png");
+  background-repeat: no-repeat;
+  margin: 20px;
+}
+
+.phones{
+  margin: 40px;
+  align-items: center;
+  padding-left: 20px;
+
+}
+
+.home{
+  color: white;
+  background-image: url("/images/bgtile.png");
+  align-items: baseline;
+  border-radius: 3px;
+  border-color: #1c5380;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.home > img{
+  padding-right: 5px;
+}
+
+footer > a{
+  justify-content: center;
+  color: #1c5380;
+  text-decoration: none;
+  text-align: center;  
+  justify-content: space-between;
+  text-transform: capitalize;
+}
+
+.links{
+  margin-top: 380px;
+  text-align: center;
+
+}
+
+.apps{
+  padding-left: 20px;
 }
