--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,138 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
+
+/*
+img{
+  width: 100%;
+}
+*/
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to top, white 0%, white 65%, #06365f 65%, #36648b 100%);
+  
+
+  }
+
+h1{
+  color:#06365f;
+  font-size: 1.7em;
 }
+
+p{
+  margin-top: 20px;
+}
+
+div{
+display: flex;
+flex-direction: row;
+}
+
+li{
+margin: 20px 10px 0px 10px;
+}
+
+a{
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #1c5380;
+
+}
+
+
+
+
+.section1{
+  width: 55%;
+  display: flex;
+  justify-content: center; 
+  margin-right: 20px; 
+  margin-left: 80px;
+  
+}
+
+.section2{
+  width: 60%;
+  display: flex;
+  flex-direction: column; 
+  margin-left: 20px;
+  margin-right: 80px;
+  padding-top:20px;
+  padding-bottom: 20px;
+  
+}
+
+.article{
+  background-color: white;
+  box-shadow: 0px -3px 4px 0px #32333165;
+  padding-top: 30px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 40px;
+  border-radius: 8px;
+  margin-top: 30px;
+}
+
+.margin-div{
+  margin-top: 100px;
+}
+
+
+
+.img-instagram{
+  width: 60%;
+}
+
+.img-store{
+  width: 35%;
+  margin: 30px 10px 10px 0px;
+}
+.footer{
+  display: flex;
+  justify-content: center; 
+  margin-top: 50px;
+  margin-bottom: 40px;
+}
+
+.ul-style{
+  display:flex;
+  align-items: center;
+  text-transform: uppercase;
+  list-style:none;
+  margin-right: 20px;
+  
+}
+
+.login{
+  display: flex;
+  text-decoration: none;
+  text-transform: lowercase;
+  text-transform: capitalize;
+  color: white;
+  background-color: #1c5380;
+  padding: 3px 20px;
+  margin: 10px 0px;
+  align-items: center;
+  border: 1px #17466d solid;
+  box-shadow: 0px 0px 5px 1px #585a563a;
+}
+
+.logobottom{
+  display: flex;
+  justify-content:space-between;
+}
+
+.logobottom span{
+  margin-right: 10px;
+}
+
