--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,106 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.main-content {
+  padding: 10% 10% 3% 10%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background-image: url(../images/bgtile.png);
+  height: 100px;
+}
+
+form {
+  display: flex;
+  justify-content: space-between;
+  height: 40px;
+}
+
+.log-in {
+  background-color: #6C90AF;
+  color: white;
+  border-radius: 5px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+}
+
+span {
+  width: 60px;;
+}
+
+.main-content-text {
+  padding-left: 40px;
+  max-width: 400px;
+  position: relative;
+}
+
+.phone img {
+ height: 465px;
+}
+
+h1 {
+  padding: 15px 5% 0 5%;
+  margin-left: 8px;
+  color: #06365f;
+  font-size: 25px;
+}
+
+p {
+  margin: 10px;
+  padding: 0 5% 0 5%;
+  font-size: 0.9rem;
+  font-weight: 400;
+}
+
+article {
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  border-radius: 5px;
+}
+
+.download-buttons {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 30px;
+}
+
+.download-buttons button {
+  border: none;
+  background-color: white;
+}
+
+
+/*  F O O T E R  */
+
+footer {
+  margin-top: 400px;
+  text-align: center;
+  text-decoration: none;
+  padding-bottom: 5%;
+}
+
+a:link {
+  text-decoration: none;
+  color: #1c5380;
+}
+
+a:visited {
+  color: #1c5380;
+}
+
+li {
+  list-style: none;
+  display: inline;
+  padding: 5px;
+  text-transform: uppercase;
+  font-size: small;
+  font-weight: 600;
+}
+
+#copyright {
+  padding-left: 25px;
+  opacity: 0.4;
 }
