--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,73 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(to bottom, #1c5380 30%, white 30%)
+}
+
+.linea {
+  display:flex;
+  justify-content: space-between;
+
+}
+
+.izquierda {
+  padding-bottom: 500px;
+  padding-top: 10%;
+}
+
+.foto{
+  margin-left:300px;
+}
+
+.derecha {
+  padding-bottom: 200px;
+  padding-top: 10%;
+  margin-right: 150px;
+}
+
+.seccion{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.bt1{
+  margin:60px;
+  color: white;
+  background-color: #1c5380 ;
+  width: 100px;
+}
+
+.fondo_blanco {
+  position: relative;
+  display: inline-block;
+  text-align: center;
+}
+
+.texto {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  margin-left: 10px;
+}
+
+.texto2 {
+  position:absolute;
+  top: 60px;
+  width:400px;
+  margin-left: 30px;
+  text-align: left;
+}
+
+.descarga{
+  margin-left:50px;
+  text-align: center;
+}
+
+.informacion{
+  display: inline;
+  text-align:center;
+  justify-content: space-evenly;
+  
+
 }
