--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,65 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+#container {
+  margin: 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.left {
+  order: 1;
+  padding-right: 50px;
+}
+
+.right {
+  order: 2;
+  width: 500px;
+  padding-top: 50px;
+}
+
+.header {
+  padding-bottom: 25px;
+}
+
+button {
+  background: rgb(6, 54, 95);
+  background: linear-gradient(
+    0deg,
+    rgba(6, 54, 95, 1) 0%,
+    rgba(47, 107, 157, 1) 100%
+  );
+  border: 1px solid #06365f;
+  padding: 10px;
+  color: white;
+  font-weight: bold;
+}
+
+.content {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 40px;
+}
+
+h1 {
+  margin: 0;
+  color: #06365f;
+}
+
+footer {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 0.75em;
+  font-weight: bold;
+  color: gray;
+}
+
+footer a {
+  color: #1c5380;
 }
