--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,65 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(0deg, rgba(255,255,255,1) 65%, rgba(28,83,128,1) 35%);
+  background-repeat: no-repeat;
+}
+
+#principal-flex, 
+#footer{
+  width: 1000px;
+  margin: auto;
+}
+
+
+#principal-flex{
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+
+}
+#principal-flex div{
+  padding: 20px;
+}
+
+.info-flex{
+  display: flex;
+  flex-direction: column;
+
+}
+.header-log{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+.info-text{
+  background-color: #fff ;
+  border-radius: 5px;
+  box-shadow: 0px 0px 8px rgb(0 0 0 / 50%);
+}
+
+
+#footer{
+
+}
+
+#footer a{
+  text-decoration: none;
+}
+
+#footer ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+#footer li{
+    padding: 0 20px;
+
 }
