--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,118 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: border-box;
+  font-family: arial;
+  font-size: 10px;
+  padding: 0;
+  border: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background: rgb(28, 83, 128);
+  background: linear-gradient(
+    180deg,
+    rgba(28, 83, 128, 1) 0%,
+    rgba(52, 141, 214, 1) 35%,
+    rgba(255, 255, 255, 1) 36%
+  );
+}
+
+.allLanding {
+  display: flex;
+  height: 85vh;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 10rem;
+}
+
+.leftSite {
+  width: 30vw;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 15rem;
+}
+
+.leftSite img {
+  width: 36rem;
+}
+
+.rightSite {
+  width: 50vw;
+  height: 80vh;
+}
+
+.upperRight {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 75%;
+}
+
+.logIn {
+  width: 8rem;
+  height: 4rem;
+  background-color: #1c5380;
+  color: white;
+  font-weight: bolder;
+  border-radius: 1rem;
+  font-weight: 800;
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.bottomRight {
+  background-color: white;
+  background-size: cover;
+  height: 63vh;
+  width: 75%;
+  padding-top: 1rem;
+  padding-left: 4rem;
+  border-radius: 1rem;
+}
+
+.bottomRight h1 {
+  color: #06365f;
+  font-size: 3rem;
+}
+
+.bottomRight p {
+  font-size: 2rem;
+}
+
+.download img {
+  padding-right: 1.5rem;
+}
+
+.bottomSite {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 13vh;
+}
+
+.listaBottom {
+  display: flex;
+  width: 40vw;
+  justify-content: space-evenly;
+  list-style: none;
+}
+
+.listaBottom li a {
+  text-decoration: none;
+  font-weight: 800;
+  color: #1c5380;
+}
+
+.bottomSite p {
+  color: #727a81;
+  font-weight: 800;
 }
