--- a/styles/style.css
+++ b/styles/style.css
@@ -80,10 +80,9 @@ button.log-button{
 }
 
 .info-text{
-  background-color: #fff ;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.30);
-  
+  background-image: url(../images/frame.png);
+  background-repeat:no-repeat;
+  background-size: contain; 
 }
 
 
