--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,6 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  background-color: #1c5380;
 }
