--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,110 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: rgb(70,110,143);
+  background: linear-gradient(180deg, rgba(70,110,143,1) 44%, rgba(255,255,255,1) 46%);
+  background-repeat: no-repeat;
+}
+
+.centralPart {
+  display: flex;
+  justify-content:center;
+  margin: 100px 50px auto 50px;
+}
+
+
+.logoText {
+  display: flex;
+  flex-direction: column;
+  justify-content:space-around;
+  margin: 0 30px;
+  width:450px;
+}
+
+.logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.logIg {
+  height: 90px;
+  padding-top:20px
+}
+
+.login {
+  display: flex;
+  align-items: center;
+  background: rgb(147,168,186);
+  background: linear-gradient(180deg, rgba(106,142,172,1) 0%, rgba(75,119,155,1) 44%);
+  border: 1px solid rgb(57, 99, 133);
+  margin: 40px 0 20px 0;
+  padding-right: 10px;
+  color: rgb(188,204,217);
+  height: 40px;
+
+}
+
+.login img {
+  padding: 5px;
+  width: 30px;
+}
+
+.text {
+  padding-right: 50%;
+  background-image: url("/images/frame.png");
+  background-repeat: no-repeat;
+  padding:30px 70px 30px 30px;
+  height: 300px;
+
+
+}
+
+.text h3{
+  color:rgba(70,110,143);
+  font-size: 1.4em;
+  padding-bottom: 30px;
+}
+
+.downIcon {
+  padding-left: 20px;
+  display: flex;
+  justify-content: right;
+  height: 100px;
+  align-items: center;
+  
+}
+
+.downIcon img{
+  height: 60px;
+  padding: 10px;
+}
+
+
+.footer ul {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+.footer li{
+  list-style: none;
+  padding: 1%;
+  color: rgb(126,156,182);
+  font-weight: bold;
+  font-size: 12px;
+}
+
+#copyIg {
+  color: rgb(192, 192, 192)
 }
