--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,140 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: white;
+  width: 100%;
 }
+
+.background {
+  background: linear-gradient(180deg, rgba(140,160,176,1) 0%, rgba(6,54,95,1) 35%, rgba(255,255,255,0) 35%);
+  background-size: cover;
+  width: 1500px;
+  height: 1000px;
+  background-repeat:space;
+  display:flex;
+  flex-direction: column;
+}
+
+.container {
+  margin: 150px;
+  display:flex;
+  align-content: space-around;
+}
+
+.top
+{ margin-top: 20px;
+  display: flex;
+  justify-content:space-between;
+  display: flex;
+  align-items: center;
+  width: 69%;
+}
+
+.log-in-button img{
+width: 40px;
+}
+
+.left-side img {
+  height: 100%;
+  margin-right: 100px;
+}
+
+.right-side {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+
+}
+
+.left-side {
+  width: 40%;
+}
+
+.bottom {
+  margin-top: 15px;
+  background: url(/images/frame.png);
+  background-repeat: no-repeat ;
+  justify-content: left;
+}
+
+footer {
+    margin-left: 350px;
+    margin-right: 350px;
+}
+
+footer ul{
+  list-style: none;
+  display: flex;
+  align-content:space-between;
+  justify-content: space-between;
+  width: 100%;
+}
+
+footer ul li a{
+  color: #1c5380;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.text {
+  width: 60%;
+  margin: 30px 40px;
+}
+
+h1 {
+  color: #06365f;
+  margin-bottom: 20px;
+}
+
+h4{
+  font-weight: 200;
+}
+
+.special-words {
+  font-weight: bold;
+}
+
+.buttons {
+  margin-left: 35px;
+}
+
+.buttons img{
+  margin-top: 20px;
+  padding-right: 20px; 
+}
+
+#copyright {
+  color: lightslategrey;
+  font-weight: 700;
+}
+
+#login-button{
+  border:black solid 1px;
+  height: 50px;
+  width: auto;
+  border-radius: 3px;
+  border-color: #1c5380;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0px 10px ;
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+  background: rgb(28,83,128);
+  background: linear-gradient(180deg, rgba(140,160,176,1) 10%, rgba(6,54,95,1) 100%);
+}
+
+#login-button a {
+  margin-left: 5px;
+}
+
