--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
 }
 .fondo{
   background: rgb(28,83,128);
-  background: linear-gradient(180deg, rgb(42, 129, 201) 0%, rgba(6,54,95,1) 370px, rgba(255,255,255,1) 370px, rgba(255,255,255,1) 100%);
+  background: linear-gradient(180deg, rgb(94, 127, 155) 0%, rgba(65,95,130) 370px, rgba(255,255,255,1) 370px, rgba(255,255,255,1) 100%);
   height: 800px;
   margin-top: 0;
   
@@ -65,7 +65,7 @@ body {
   color: white;
   padding: 12px;
   background: rgb(28,83,128);
-  background: linear-gradient(180deg, rgb(42, 129, 201) 0%, rgb(8, 73, 129) 90%);
+  background: linear-gradient(180deg, rgb(94, 127, 155) 0%, rgba(65,95,130) 90%);
   border: 1px solid rgb(18, 61, 95);
   border-radius: 3px;
   cursor:pointer;
