--- a/styles/style.css
+++ b/styles/style.css
@@ -8,5 +8,121 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
+
+  background: #1c5380;
+  background: linear-gradient(
+    180deg,
+    #06365f 0%,
+    #1c5380 40%,
+    #ffffff 36%
+  );
+}
+
+*{
+  box-sizing: border-box; 
+}
+
+
+.content-main{
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  margin: 5% 50%;
+}
+
+.phone{
+  margin-right: 50px;
+  height: 35rem;
+}
+
+.info-main{
+  display: flex;
+  flex-flow: column;
+  width: 50rem;
+}
+
+.info-header{
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.home-button{
   background-color: #1c5380;
+  background: #1c5380;
+  background: linear-gradient(
+    180deg,
+    #06365f 0%,
+    #1c5380 100%,
+    #ffffff 36%
+  );
+  color: #ffffff;
+  font-weight: 800;
+  border-radius: 5px;
+  box-shadow: 0px 0px 12px 0px rgba(10,10,10,0.75);
+
+  margin-left: 50px;
+
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  text-align: center;
+  padding: 10px;
+  width: 120px
+}
+
+.home-icon{
+  margin-right: 20px;
+}
+
+.info-content{
+  margin-left: 15px;
+  margin-top: 40px;
+  width: 80%;
+}
+
+.info-content > h1{
+  width: 80%;
+}
+
+.content-frame {
+  position: absolute;
+  bottom: 35%;
+  left: 46.2%;
+  z-index: -1;
+}
+
+.info-text{
+  z-index: 2;
+}
+
+.downloads{
+  display: flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+  margin: 5px;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.info-footer{
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
+  color: #111;
+}
+
+li{
+ margin: 0 10px;
+ list-style: none;
+}
+
+a{
+  color: #111;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 500;
 }
