--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,122 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: linear-gradient(45deg, #06365f, #1c5380);
+  background-size: 100% 40%;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+}
+
+section {
+  width: 550px;
+  height: 500px;
+  position: absolute;
+  margin: auto;
+  top: 15%;
+  left: 20%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.image img {
+  width: 250px;
+  margin-right: 50px;
+  display: flex;
+  flex-basis: 100%;
+}
+
+.main-text {
+  /* margin-left: 200px; */
+  width: 450px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-text button {
+  height: 30px;
+  width: 80px;
+  background-color: #1c5380;
+  color: white;
+  border: 1px solid lightgray;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+button image {
+  margin-right: 10px;
+}
+
+button p {
+  margin-top: 3px;
+}
+
+.line-break {
+  height: 100%;
+}
+
+footer {
+  width: 100%;
+  height: 2 em;
+  position: absolute;
+  bottom: 0;
+}
+
+.card {
+  margin-top: 20px;
+  background-image: url('/images/frame.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  width: 450px;
+  z-index: 1;
+}
+
+h2 {
+  width: 250px;
+  margin-left: 30px;
+  margin-top: 20px;
+  font-size: 1.3em;
+  color: #06365f;
+}
+
+.card p {
+  width: 370px;
+  font-size: 0.8em;
+  margin-left: 30px;
+  margin-top: 0;
+}
+
+.apps {
+  display: flex;
+  flex-direction: row;
+  margin-left: 20px;
+}
+
+.card a img {
+  margin-left: 20px;
+  width: 120px;
+}
+
+footer ul {
+  margin: 20px auto;
+  display: flex;
+  justify-content: space-evenly;
+  width: 55%;
+  list-style-type: none;
+  color: rgb(84,112,150);
+  font-family: Calibri;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 0.8em;
+}
+
+.grey {
+  color: lightgray;
 }
