--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,63 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding:0; 
+}
+
+.banner {
+  background-color: #1c5380;
+  height: 50vh;
+}
+
+.brand-logo {
+  position: absolute;
+  right: 35%;
+  top: 22%;
+}
+
+.home-link {
+  position: absolute;
+  right: 26%;
+  top: 25%;
+  background-color: #06365f;
+  padding: 0.5%;
+  border-radius: 5%;
+  color: white;
+  text-decoration: none;
+}
+
+
+
+.iphone {
+  position: absolute;
+  top: 20%;
+  left: 20%;
+}
+
+
+
+.text-box {
+  position: relative;
+  bottom: 80px;
+  left: 45%;
+  width: 21%;
+  background-image: url(/images/frame.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 5%;
+  padding-top: 1%;
+}
+
+
+
+
+.phone-img {
+  float: left; 
+  width: 40%;
+  padding: 5px;
+}
+
+footer {
+  margin: 60px;
+  
 }
