--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,121 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 ;
+  max-width: 1350px;
+  min-width: 750px;
+  height: 100vh;
 }
+.main-card{
+  display: flex;
+}
+
+.blue-background{
+background-image: url(/images/bgtile.png);
+width: 100%;
+height: 300px;
+}
+.left-side{
+  width: 500px;
+}
+
+.phone-img{
+  width: 320px;
+  position: relative;
+  bottom: 170px;
+  left: 190px;
+}
+
+.right-side{
+  position: relative;
+  left: 125px;
+  bottom: 200px;
+
+}
+
+.ig-logo{
+width: 300px;
+position: relative;
+top: 35px;
+right: 25px;
+margin: 0;
+padding: 0;
+}
+
+.log-in-btn{
+  border: 1px solid #1c5380;
+  position: relative;
+  left: 24px;
+  top: 5px;
+  padding: 15px 25px;
+  margin-left: 20px;
+  border-radius: 5px;
+  box-shadow: 1px 5px 10px 1px #1c5380;
+  text-decoration: none;
+  color: azure;
+}
+.home-icon{
+  position: relative;
+  top: 5px;
+  right: 3px;
+}
+
+.text-section {
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+  position: relative;
+  top: 50px;
+  right: 30px;
+  width: 500px;
+  
+}
+
+.text-section h2{
+padding: 25px 0 0 35px;
+ width: 250px;
+ margin: 0;
+ color: #06365f;
+}
+
+
+.text-section p{
+  padding: 0 25px 0 35px;
+}
+
+.text-span {
+ font-weight: bolder;
+}
+
+.bottom-buttons{
+  position: relative;
+  left: 25px;
+  top: 20px;
+}
+
+.bottom-buttons a {
+  padding:15px;
+}
+
+li {
+  display: inline;
+  position: relative;
+  top: 100px;
+  font-size: 12px;
+  right: 330px;
+  padding: 3px;
+  font-weight: bolder;
+  color: #1c5380;
+  text-transform: uppercase;
+}
+
+.copy {
+position: relative;
+top: 59px;
+left: 130px;
+font-size: 12px;
+text-transform: uppercase;
+}
+
+
+
+
