--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0 ;
+  margin: 0 auto;
   max-width: 1350px;
   min-width: 750px;
   height: 100vh;
