--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,143 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+* {
+  box-sizing: border-box;
+  list-style: none;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.main {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.main-content-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: -250px;
+}
+.bg-tile img {
+  width: 100%;
+  height: 250px;
+}
+
+.right-container {
+  display: flex;
+  flex-direction: column;
+  width: 40vw;
+  margin: 60px;
+  flex-wrap: wrap;
+}
+
+.left-container {
+  margin: 60px;
+  width: fit-content;
+}
+
+.right-first-subcontainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.home-button {
+  color: #dde7ef;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.home-button button {
+  background: none;
+  color: inherit;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  background: rgb(78, 135, 182);
+  background: linear-gradient(
+    180deg,
+    rgba(78, 135, 182, 1) 0%,
+    rgba(28, 83, 128, 1) 100%
+  );
+
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 40px;
+  border-radius: 3px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -20px;
+}
+
+.home-button button img {
+  margin-right: 10px;
+}
+
+.title {
+  margin-bottom: -20px;
+  margin-left: 30px;
+  margin-right: 30px;
+  font-size: 35px;
+  color: #06365f;
+  width: 400px;
+}
+
+.description {
+  color: rgb(60, 60, 60);
+  font-weight: 400;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 10px;
+}
+
+.right-first-subcontainer .main-logo {
+  width: 300px;
+  margin-bottom: 20px;
+}
+
+.right-second-subcontainer {
+  background-size: 100% 100%;
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+}
+
+.badge {
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  margin-top: -50px;
+}
+
+.footer ul {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer ul li {
+  font-size: 14px;
+  margin: 10px;
+  font-weight: 700;
+}
+
+.footer ul li a {
+  color: #1c5380;
+  text-decoration: none;
+}
+
+.footer ul li p {
+  color: rgb(164, 164, 164);
+  margin-top: 1px;
 }
