--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,94 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("/images/bgtile.png");
+  background-repeat: repeat-x;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 50px;
+  margin-left: 50px;
+
+}
+
+.main-container {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.homeImg {
+  padding: 5px 10px 5px 0;
+}
+
+.header button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  background: linear-gradient(#6f92b0, #457298);
+  font-weight: 400;
+  border-width: 1px;
+  border-color: #1c5380;
+  border-radius: 5px;
+  padding: 5px 10px 5px 10px;
+}
+
+.main-column {
+  padding: 20px;
+}
+
+h1 {
+  color: #06365f;
+}
+
+.frameContent {
+  padding: 30px;
+  background-image: url("/images/frame.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.getItNow {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.iphoneImg {
+  padding-right: 20px;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-items: center;
+}
+
+.footer-links ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer-links li{
+  list-style: none;
+  padding-left: 5px;
+  padding-right: 5px;
+  color: #1c5380;
 }
