--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,53 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+	margin: 0;
+	padding: 0;
+}
+
+html {
+	height: 100%;
+}
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+	font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+	height: 100%;
+	background: rgb(28, 83, 128);
+	box-sizing: border-box;
+	background: linear-gradient(180deg, rgba(28, 83, 128, 1) 45%, rgba(255, 255, 255, 1) 45%);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+main {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 70%;
+}
+
+#home {
+	width: 50px;
+	height: 50px;
+}
+
+nav {
+	display: flex;
+	justify-content: space-between;
+	width: 50%;
+}
+
+p {
+	width: 40%;
+}
+
+h5 {
+	width: 40%;
+}
+
+.text-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
