--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,57 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.main {
+  padding: 100px 100px 60px 100px;
+  display: flex;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat no-repeat;
+}
+
+.right-column {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.top-login {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.top-login button {
+  background-color: #1c5380;
+  border: 1px solid #06365f;
+  height: 40px;
+}
+
+.text-box {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain; 
+  padding: 20px 50px 50px 50px;
+}
+
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+footer ul {
+  display: flex;
+  list-style: none;
+
+}
+
+footer ul li {
+  margin-left: 15px;
+}
+
+footer a {
+  color: #1c5380;
+  text-decoration: none;
+  font-weight: 500;
+}
