--- a/styles/style.css
+++ b/styles/style.css
@@ -81,12 +81,14 @@ p {
 }
 
 #degrBack {
-  background: rgb(255, 255, 255);
+  /* background: rgb(255, 255, 255);
   background: linear-gradient(
     180deg,
     rgba(255, 255, 255, 1) 74%,
     rgba(255, 255, 255, 0) 99%
-  );
+  ); */
+  background-image: url(../images/frame.png);
+  background-size: 80rem 55rem;
   background-position: center;
   background-repeat: no-repeat;
   border-top-left-radius: 1rem;
@@ -103,6 +105,7 @@ ul {
   list-style-type: none;
   display: flex;
   justify-content: center;
+  align-items: center;
   padding-top: 8rem;
   padding-bottom: 5rem;
 }
@@ -110,6 +113,8 @@ ul {
 li {
   padding-left: 3rem;
   padding-right: 3rem;
+  font-size: 1.6rem;
+  color: grey;
 }
 
 a {
@@ -130,7 +135,7 @@ a {
 }
 
 #instagramLogo {
-  padding-left: 3rem;
+  padding-left: 5rem;
   margin: 0;
   width: 50rem;
 }
